Rename template view file
単数型の方がよりわかりやすいので改名しました。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -70,13 +70,13 @@
         %h2
           userのその他の商品
         .items
-          = render 'related_items'
-          = render 'related_items'
+          = render 'related_item'
+          = render 'related_item'
       %section
         %h2
           同じカテゴリーの商品
         .items
-          = render 'related_items'
-          = render 'related_items'
-          = render 'related_items'
+          = render 'related_item'
+          = render 'related_item'
+          = render 'related_item'
 -# = render "footer"
