--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 .signIn
   .header
     .header__image
-      = image_tag "logo.png", size: "300x100"
+      = image_tag "/logo/logo.png", size: "300x100"
     %nav.header__progress
       %ol
         %li.header__progress__text__active{ id: "first" }
@@ -80,7 +80,7 @@
 .signIn
   .header
     .header__image
-      = image_tag "logo.png", size: "300x100"
+      = image_tag "/logo/logo.png", size: "300x100"
     %nav.header__progress
       %ol
         %li.header__progress__text__passive{ id: "first" }
