--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,152 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// header部
+.header {
+  padding: 0 60px;
+  .headerinner {
+    width: 100%;
+    max-width: 1040px;
+    min-height: 82px;
+    margin: 0 auto;
+    padding: 15px 0 0;
+    .headermain{
+      position: relative;
+      display: flex;
+      align-items: center;
+      &__logo {
+        padding-bottom: 10px;
+        margin-right: 30px;
+        a {
+          width: 140px;
+          display: block;
+        }
+        &--img {
+          width: 100%;
+          vertical-align: bottom;
+        }
+      }
+      &__search {
+        margin-left: auto;
+        width: 100%;
+        form {
+          width: 100%;
+          margin-bottom: 5px;
+          display: flex;
+          .search__input{
+            width: calc(100% - 26px);
+            padding-left: 5px;
+          }
+          button {
+            width: 36px;
+            border: 0;
+            cursor: pointer;
+            background-color: #3CCACE;
+            padding: 8px;
+            .search__submit {
+              &__btn {
+                width: 100%;
+                vertical-align: bottom;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .lists {
+      font-size: 14px;
+      display: flex;
+      margin-bottom: 10px;
+      &__left {
+        position: relative;
+        display: flex;
+        list-style: none;
+        &__item {
+          line-height: 38px;
+          padding: 0 0 0 16px;
+          a {
+            color: #333;
+            text-decoration: none;
+            padding-right: 30px;
+          }
+          &--first {
+            padding: 0;
+          }
+        }
+      }
+      &__right {
+        margin-left: auto;
+        display: flex;
+        list-style: none;
+        &__item {
+          line-height: 38px;
+          padding: 0 0 0 16px;
+          a {
+            display: flex;
+            color: #333;
+            align-items: center;
+            text-decoration: none;
+            line-height: 32px;
+          }
+        }
+      }
+    }
+  }
+}
+
+// main部
+.main {
+  background: #f8f8f8;
+  .top-view{
+    height: 560px;
+    background-image: image-url('/pict/bg-mainVisual-pict_pc.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    position: relative;
+    padding: 0 60px;
+    display: flex;
+    align-items: center;
+    &__content {
+      max-width: 1280px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 35px 0 0 0;
+      &__subtitle {
+        text-shadow: 0 0 5px rgba(0,0,0,0.4);
+        font-size: 60px;
+        line-height: 1.2;
+        color: #fff;
+      }
+      &__text {
+        text-shadow: 0 0 5px rgba(0,0,0,0.4);
+        font-size: 18px;
+        color: #fff;
+        line-height: 1.77778;
+        margin: 16px 0 0 0;
+      }
+      &__btn {
+        display: flex;
+        margin: 24px 0 0 0;
+        .a-btn {
+          margin-right: 10px;
+          width: 180px;
+        }
+        .g-btn {
+          width: 180px;
+        }
+        .btn__image {
+          width: 100%;
+          vertical-align: bottom;
+        }
+      }
+    }
+    &__picture {
+      position: absolute;
+      top: 0;
+      right: 210px;
+    }
+  }
+}
