--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -61,7 +61,7 @@
           (税込)
         %span.item-container__price-box__delivery-fee
           送料込み
-      = link_to "購入画面に進む", "#", {class: "item-container__buy-btn"}
+      = link_to "購入画面に進む", "/items/:id/buy/confirmation", {class: "item-container__buy-btn"}
       .item-container__explanation
         商品の説明
     .related-items
