--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -77,3 +77,14 @@
           %span 業界最安
         %p.list__description
           最大3%でお得に出品&購入!
+
+  .secondview
+    .secondview__inner
+      %h2.secondview__inner__subtitle
+      %p.secondview__inner__text
+        FURIMAは、フリマアプリで最も人気。
+        %br 出品・購入回数も業界最多です！
+        %br ほしかったあの商品に出会えるかもしれません。
+      .secondview__inner__btn
+        = link_to image_tag('/icon/appstore.svg', class: "btn__image"), "#", class: "a-btn"
+        = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "g-btn"
