--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -86,5 +86,5 @@
         %br 出品・購入回数も業界最多です！
         %br ほしかったあの商品に出会えるかもしれません。
       .secondview__inner__btn
-        = link_to image_tag('/icon/appstore.svg', class: "btn__image"), "#", class: "a-btn"
-        = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "g-btn"
+        = link_to image_tag('/icon/appstore.svg', class: "btn__image"), "#", class: "btn"
+        = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "btn"
