--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -88,3 +88,28 @@
       .secondview__inner__btn
         = link_to image_tag('/icon/appstore.svg', class: "btn__image"), "#", class: "btn"
         = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "btn"
+
+  .feature
+    %2.feature__head
+    .feature__items
+      .feature__items__item
+        .feature__items__item__img
+          = image_tag('/icon/icon-01.png')
+        %h3.feature__items__item__subtitle
+          簡単に売り買いできる
+        %p.feature__items__item__detail
+          スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
+      .feature__items__item
+        .feature__items__item__img
+          = image_tag('/icon/icon-03.png')
+        %h3.feature__items__item__subtitle
+          売上金は即日振込みに対応
+        %p.feature__items__item__detail
+          午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします！
+      .feature__items__item
+        .feature__items__item__img
+          = image_tag('/icon/icon-04.png')
+        %h3.feature__items__item__subtitle
+          様々な支払いに対応
+        %p.feature__items__item__detail
+          お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
