--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "reset";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "users/sign_in"
+@import "users/sign_in";
+@import "users/sign_up";
