--- a/app/assets/stylesheets/users/_sign_in.scss
+++ b/app/assets/stylesheets/users/_sign_in.scss
@@ -1,7 +1,3 @@
-.body {
-  height: 100%;
-  width: 100vw;
-}
 
 li {
   display: inline-block;
@@ -11,7 +7,27 @@ li {
   font-weight: 600;
 }
 
+input {
+  height: 20px;
+  width: 100%;
+  padding: 10px 10px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 16px;
+}
 
+span {
+  font-size: 12px;
+  color: white;
+  padding: 2px 4px;
+  border-radius: 2px;
+}
+
+label {
+  font-weight: bold;
+}
 
 .signIn {
   height: 100%;
@@ -30,26 +46,26 @@ li {
       height: 50px;
       padding: 30px 0 0 44px;
       border: 0;
-      .header__progress__text__active {
+      &__text__active {
         color: red;
         font-weight: 600;
       }
-      .header__progress__round__passive {
+      &__round__passive {
         width: 12px;
         height: 12px;
         margin: 8px auto 0;
         background: #ccc;
         border-radius: 50%;
       }
-      .header__progress__round__active {
+      &__round__active {
         width: 12px;
         height: 12px;
         margin: 8px auto 0;
         background: red;
         border-radius: 50%;
       }
-      .header__progress__text {
-        .header__progress__round__passive {
+      &__text {
+        &__round__passive {
           width: 12px;
           height: 12px;
           margin: 8px auto 0;
@@ -77,29 +93,34 @@ li {
     }
     &__group {
       padding: 50px;
-      width: 67%;
+      max-width: 343px;
       margin: 0 auto;
       &__content {
-        margin: 20px 15px;
-        label {
-          font-size: 14px;
-          font-weight: bold;
+        margin-top: 30px;
+        &__required {
+          background-color: red;
         }
-        span {
+        &__any {
           font-size: 12px;
           color: white;
-          background-color: red;
+          background-color: #ccc;
           padding: 2px 4px;
           border-radius: 2px;
         }
-        input {
+        
+        &__name {
+          margin-right: 7px;
+          margin-top: 8px;
           height: 20px;
+          width: 110px;
+
           padding: 10px 16px 8px;
           border-radius: 4px;
           border: 1px solid #ccc;
           background: #fff;
           line-height: 1.5;
           font-size: 16px;
+          outline: none;
         }
         
       }
@@ -110,7 +131,7 @@ li {
       background: #3CCACE;
       border: 1px solid #3CCACE;
       color: #fff;
-      
+      margin-top: 70px;
 
       display: block;
       width: 100%;
@@ -118,11 +139,28 @@ li {
       font-size: 14px;
       border: 1px solid transparent;
     }
-
-    
   
   .footer {
-    height: 100px;
+    height: 190px;
     width: 100%;
+    background-color: #f5f5f5;
+    padding: 40px 0;
+    text-align: center;
+    &__content {
+      width: 456px;
+      margin: 0 auto;
+      &__text {
+        a {
+          text-decoration: none;
+          color: black;
+          font-size: 12px;
+        }
+      }
+      &__image {
+        width: 200px;
+        height: 65px;
+        margin: 40px auto 0;
+      }
+    }
   }
 }
