update render sub_header
ヘッダー部をテンプレートを使用して呼び出すよう変更しました。

--- a/app/views/items/buy_confirmation.html.haml
+++ b/app/views/items/buy_confirmation.html.haml
@@ -1,6 +1,4 @@
-%header.sub-header
-  %p.sub-header__logo
-    = image_tag '/logo/logo.png'
+= render 'modules/sub_header'
 %main.buy-main
   .buy-confirmation
     %h2.buy-confirmation__text
