--- a/app/views/items/buy_confirmation.html.haml
+++ b/app/views/items/buy_confirmation.html.haml
@@ -48,14 +48,4 @@
               = link_to "変更する", "#", {class: "user-info-box__info__edit"}
           .purchase-confirmation
             %input{ type: 'submit', value: '購入する', class: 'purchase-confirmation__submit' }
-%footer.sub-footer
-  %nav.sub-footer__links
-    %ul.sub-footer__links__list
-      %li.sub-footer__links__list__text
-        = link_to "プライバシーポリシー", "#"
-      %li.sub-footer__links__list__text
-        = link_to "利用規約", "#"
-      %li.sub-footer__links__list__text
-        = link_to "特定商取引に関する表記", "#"
-  = link_to "#", {class: "sub-footer__logo"} do
-    = image_tag "/logo/logo-white.png"
+= render 'modules/sub_footer'
