--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -90,7 +90,8 @@
         = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "btn"
 
   .feature
-    %2.feature__head
+    %h2.feature__head
+      FURIMAの特徴
     .feature__items
       .feature__items__item
         .feature__items__item__img
