--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import "reset";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-
+@import "users/sign_in";
+@import "users/sign_up";
 
 @import "mixin/show";
 @import "items/show";
