scss_factaring_mixim

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -24,7 +24,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）フリマ太郎ゴンザレス"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）フリマ太郎ゴンザレス"}
 
       .input__group__content
         %label.input__group__content__label
@@ -32,7 +32,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "email", class: "input__group__box", placeholder: "例）hurima@hurima.com"}
+        %input{type: "email", class: "input__group__content__box", placeholder: "例）hurima@hurima.com"}
 
       .input__group__content
         %label.input__group__content__label
@@ -40,7 +40,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "email", class: "input__group__box", placeholder: "PC,携帯どちらでも可"}
+        %input{type: "email", class: "input__group__content__box", placeholder: "PC,携帯どちらでも可"}
             
       .input__group__content
         %label.input__group__content__label
@@ -65,11 +65,11 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "date", class: "input__group__box"}
+        %input{type: "date", class: "input__group__content__box"}
         
       
       .input__group__content__btn
-        %button.btn
+        %button.input__group__content__btn__tag
           次に進む
   
   .footer
@@ -102,7 +102,7 @@
           .header__progress__round__active
         %li.header__progress__text{ id: "end" }
           登録完了
-          .header__progress__text__round__passive
+          .header__progress__round__passive
   .input
     %h1.input__name
       送付先住所入力
@@ -131,7 +131,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "ハイフンなし"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "ハイフンなし"}
       
       .input__group__content
         %label.input__group__content__label
@@ -139,7 +139,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）大阪府"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）大阪府"}
 
       .input__group__content
         %label.input__group__content__label
@@ -147,7 +147,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）東大阪市"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）東大阪市"}
        
       .input__group__content
         %label.input__group__content__label
@@ -155,7 +155,7 @@
         %span.input__group__content__required
           必須
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）松原1-4-1"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）松原1-4-1"}
       
       .input__group__content
         %label.input__group__content__label
@@ -163,7 +163,7 @@
         %span.input__group__content__any
           任意
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）東堂ビルF９"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）東堂ビルF９"}
 
       .input__group__content
         %label.input__group__content__label
@@ -171,11 +171,11 @@
         %span.input__group__content__any
           任意
         %br
-        %input{type: "text", class: "input__group__box", placeholder: "例）090-1234-5678"}
+        %input{type: "text", class: "input__group__content__box", placeholder: "例）090-1234-5678"}
 
 
       .input__group__content__btn
-        %button.input__group__btn
+        %button.input__group__content__btn__tag
           登録する
   .footer
     %ul.footer__content
