--- a/app/assets/stylesheets/users/_sign_in.scss
+++ b/app/assets/stylesheets/users/_sign_in.scss
@@ -1,145 +1,71 @@
-
-li {
-  display: inline-block;
-  text-align: center;
-  font-size:15px;
-  color: #ccc;
-  font-weight: 600;
-}
-
-input {
+@mixin formbox{
+  width: 90%;
   height: 20px;
-  width: 100%;
-  padding: 10px 10px 8px;
+  padding: 10px 16px 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
   background: #fff;
   line-height: 1.5;
   font-size: 16px;
+  height: 30px;
 }
 
-span {
+@mixin btnbox{
+  background: #3CCACE;
+  border: 1px solid #3CCACE;
+  color: #fff;
+  margin-top: 70px;
+
+  display: block;
+  width: 100%;
+  line-height: 40px;
+  font-size: 14px;
+  border: 1px solid transparent;
+}
+
+@mixin textpolicy{
+  text-decoration: none;
+  color: black;
   font-size: 12px;
-  color: white;
-  padding: 2px 4px;
-  border-radius: 2px;
 }
 
-label {
-  font-weight: bold;
-}
-
-.signIn {
+.signUp {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   background-color: #f5f5f5;
   .header {
     height: 100px;
     width: 100%;
-    display: flex;
     &__image {
       width: 300px;
       height: 100px;
-      margin-left: calc(100% - 75%);
+      margin: 0 auto;
     }
-    &__progress {
-      height: 50px;
-      padding: 30px 0 0 44px;
-      border: 0;
-      &__text__active {
-        color: red;
-        font-weight: 600;
-      }
-      &__round__passive {
-        width: 12px;
-        height: 12px;
-        margin: 8px auto 0;
-        background: #ccc;
-        border-radius: 50%;
-      }
-      &__round__active {
-        width: 12px;
-        height: 12px;
-        margin: 8px auto 0;
-        background: red;
-        border-radius: 50%;
-      }
-      &__text {
-        &__round__passive {
-          width: 12px;
-          height: 12px;
-          margin: 8px auto 0;
-          background: #ccc;
-          border-radius: 50%;
-        }
-      }
-    }
-
   }
-
-
-
-
-
-
   .input {
     width: 50%;
     height: 100%;
     margin: 0 auto;
     background-color: white;
-    &__name {
-      font-size: 30px;
-      text-align: center;
-    }
     &__group {
-      padding: 50px;
-      max-width: 343px;
+      padding: 20px;
+      width: 300px;
       margin: 0 auto;
-      &__content {
-        margin-top: 30px;
-        &__required {
-          background-color: red;
-        }
-        &__any {
-          font-size: 12px;
-          color: white;
-          background-color: #ccc;
-          padding: 2px 4px;
-          border-radius: 2px;
-        }
-        
-        &__name {
-          margin-right: 7px;
-          margin-top: 8px;
-          height: 20px;
-          width: 110px;
-
-          padding: 10px 16px 8px;
-          border-radius: 4px;
-          border: 1px solid #ccc;
-          background: #fff;
-          line-height: 1.5;
-          font-size: 16px;
-          outline: none;
-        }
-        
+      &__mailadress {
+        font-size: 15px;
+        font-weight: 600;
+      }
+      &__pasword {
+        font-size: 15px;
+        font-weight: 600;
       }
     }
     
-  }
-    button {
-      background: #3CCACE;
-      border: 1px solid #3CCACE;
-      color: #fff;
-      margin-top: 70px;
-
-      display: block;
-      width: 100%;
-      line-height: 40px;
-      font-size: 14px;
-      border: 1px solid transparent;
+    &__group__btn {
+      @include btnbox
     }
-  
+
+  }
   .footer {
     height: 190px;
     width: 100%;
@@ -150,10 +76,8 @@ label {
       width: 456px;
       margin: 0 auto;
       &__text {
-        a {
-          text-decoration: none;
-          color: black;
-          font-size: 12px;
+        &__policy {
+          @include textpolicy
         }
       }
       &__image {
@@ -161,6 +85,8 @@ label {
         height: 65px;
         margin: 40px auto 0;
       }
+    
+      
     }
   }
 }
