--- a/app/assets/stylesheets/users/_sign_up.scss
+++ b/app/assets/stylesheets/users/_sign_up.scss
@@ -1,64 +1,164 @@
-input {
-  width: 90%;
+@mixin progress {
+  display: inline-block;
+  text-align: center;
+  font-size:15px;
+  font-weight: 600;
+}
+
+@mixin registerbox { 
   height: 20px;
-  padding: 10px 16px 8px;
+  width: 100%;
+  padding: 10px 10px 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
   background: #fff;
   line-height: 1.5;
   font-size: 16px;
-  height: 30px;
+}
+
+@mixin symbol {
+  width: 12px;
+  height: 12px;
+  margin: 8px auto 0;
+  border-radius: 50%;
+  background: #ccc;
+}
+
+@mixin symbol-red {
+  width: 12px;
+  height: 12px;
+  margin: 8px auto 0;
+  background: red;
+  border-radius: 50%;
+}
+
+@mixin required-or-any {
+  font-size: 12px;
+  color: white;
+  padding: 2px 4px;
+  border-radius: 2px;
+}
+
+@mixin btn {
+  background: #3CCACE;
+  border: 1px solid #3CCACE;
+  display: block;
+  line-height: 40px;
+  border: 1px solid transparent;
 }
 
 
 
-
-.signUp {
+.signIn {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   background-color: #f5f5f5;
   .header {
     height: 100px;
     width: 100%;
+    display: flex;
     &__image {
       width: 300px;
       height: 100px;
-      margin: 0 auto;
+      margin-left: calc(100% - 75%);
+    }
+    &__progress {
+      height: 50px;
+      padding: 30px 0 0 44px;
+      border: 0;
+      &__text__active {
+        color: red;
+        font-weight: 600;
+        @include progress
+      }
+      &__text__passive {
+        color: #ccc;
+        font-weight: 600;
+        @include progress
+      }
+      &__round__passive {
+        @include symbol
+        
+      }
+      &__round__active {
+        @include symbol-red
+      }
+      &__text {
+        color: #ccc;
+        @include progress
+        
+      }
     }
   }
+
+
+
+
+
+
   .input {
     width: 50%;
     height: 100%;
     margin: 0 auto;
     background-color: white;
+    &__name {
+      font-size: 30px;
+      text-align: center;
+    }
     &__group {
-      padding: 20px;
-      width: 300px;
+      padding: 50px;
+      max-width: 343px;
       margin: 0 auto;
-      &__mailadress {
-        font-size: 15px;
-        font-weight: 600;
-      }
-      &__pasword {
-        font-size: 15px;
-        font-weight: 600;
+      &__content {
+        margin-top: 30px;
+        &__label {
+          font-weight: bold;
+        }
+        &__required {
+          background-color: red;
+          @include required-or-any
+        }
+        &__box {
+          @include registerbox
+        }
+        
+
+        &__any {
+          background-color: #ccc;
+          @include required-or-any
+        }
+        
+        &__name {
+          margin-right: 7px;
+          margin-top: 8px;
+          height: 20px;
+          width: 110px;
+
+          padding: 10px 16px 8px;
+          border-radius: 4px;
+          border: 1px solid #ccc;
+          background: #fff;
+          line-height: 1.5;
+          font-size: 16px;
+          outline: none;
+        }
+        &__btn {
+          &__tag{
+            width: 100%;
+            font-size: 14px;
+            margin-top: 70px;
+            color: #fff;
+            @include btn
+          }
+        }
       }
     }
     
-    button {
-      background: #3CCACE;
-      border: 1px solid #3CCACE;
-      color: #fff;
-      margin-top: 70px;
-
-      display: block;
-      width: 100%;
-      line-height: 40px;
-      font-size: 14px;
-      border: 1px solid transparent;
-    }
-
   }
+
+
+
+
   .footer {
     height: 190px;
     width: 100%;
@@ -80,8 +180,6 @@ input {
         height: 65px;
         margin: 40px auto 0;
       }
-    
-      
     }
   }
 }
