--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,5 +1,5 @@
 %h1 Items#index
 %p Find me in app/views/items/index.html.erb
 .items
-  = link_to "ログイン", new_user_session_path, class: 'post'
-  = link_to "新規登録", new_user_registration_path, class: 'post'
+  = link_to "ログイン", new_user_session_path, class: 'items'
+  = link_to "新規登録", new_user_registration_path, class: 'items'
