--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -272,7 +272,7 @@
       &__item {
         display: flex;
         flex-direction: column;
-        width: calc(1 / 3 * 100%);
+        width: 28%;
         text-align: center;
         padding: 0 20px;
         &__img {
@@ -297,5 +297,98 @@
         }
       }
     }
+  }
+
+  .pickup {
+    padding: 80px 0 0;
+    background-color: #f8f8f8;
+    height: 100%;
+    &__head {
+      text-align: center;
+      font-size: 28px;
+      line-height: 1.4;
+      font-weight: bold;
+    }
+    &__box {
+      &__subtitle {
+        text-align: center;
+        a {
+          font-size: 24px;
+          text-decoration: none;
+          color: #3CCACE;
+          .title {
+            font-weight: bold;
+          }
+        }
+      }
+      &__lists {
+        width: 780px;
+        margin: 26px auto;
+        display: flex;
+        justify-content: space-around;
+        .list {
+          width: 220px;
+          display: inline-block;
+          float: left;
+          a {
+            background-color: #fff;
+            display: inline-block;
+            text-decoration: none;
+            position: relative;
+            .list--img {
+              width: 220px;
+              height: 150px;
+              position: relative;
+              overflow: hidden;
+              margin: 0;
+              z-index: auto;
+              img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                width: 100%;
+                z-index: auto;
+                height: 150px;
+                object-fit: cover;
+                vertical-align: bottom;
+              }
+            }
+            .list__body {
+              background-color: white;
+              color: #333;
+              padding: 16px;
+              &--name {
+                overflow: hidden;
+                line-height: 1.5;
+                font-size: 16px;
+                text-align: left;
+              }
+              &--details {
+                font-size: 16px;
+                ul {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  &--icon {
+                    display: inline-block;
+                    font-size: inherit;
+                    text-rendering: auto;
+                  }
+                }
+                p {
+                  font-size: 10px;
+                  text-align: left;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .pickup:last-child {
+    padding-bottom: 80px;
   }
 }
