--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -116,12 +116,13 @@
           お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
 
   .pickup
-    %h2.head
+    %h2.pickup__head
       ピックアップカテゴリー
     .pickup__box
       .pickup__box__subtitle
         = link_to "#" do
           %h3.title
+            新規投稿商品
       .pickup__box__lists
         .list
           = link_to "#" do
@@ -141,7 +142,47 @@
         .list
           = link_to "#" do
             .list--img
-              = image_tag '/pict/a002.png'
+              = image_tag '/pict/a004.png'
+            .list__body
+              %h3.list__body--name
+              .list__body--details
+                %ul
+                  %li
+                    2000円
+                  %li
+                    = icon("fas", "star", class: "list__body--details--icon")
+                    0
+                %p
+                  (税込)
+        .list
+          = link_to "#" do
+            .list--img
+              = image_tag '/pict/a007.png'
+            .list__body
+              %h3.list__body--name
+              .list__body--details
+                %ul
+                  %li
+                    1000円
+                  %li
+                    = icon("fas", "star", class: "list__body--details--icon")
+                    0
+                %p
+                  (税込)
+
+  .pickup
+    %h2.pickup__head
+      ピックアップブランド
+    .pickup__box
+      .pickup__box__subtitle
+        = link_to "#" do
+          %h3.title
+            新規投稿商品
+      .pickup__box__lists
+        .list
+          = link_to "#" do
+            .list--img
+              = image_tag '/pict/a001.png'
             .list__body
               %h3.list__body--name
               .list__body--details
@@ -156,13 +197,28 @@
         .list
           = link_to "#" do
             .list--img
-              = image_tag '/pict/a003.png'
+              = image_tag '/pict/a004.png'
             .list__body
               %h3.list__body--name
               .list__body--details
                 %ul
                   %li
-                    3000円
+                    2000円
+                  %li
+                    = icon("fas", "star", class: "list__body--details--icon")
+                    0
+                %p
+                  (税込)
+        .list
+          = link_to "#" do
+            .list--img
+              = image_tag '/pict/a007.png'
+            .list__body
+              %h3.list__body--name
+              .list__body--details
+                %ul
+                  %li
+                    1000円
                   %li
                     = icon("fas", "star", class: "list__body--details--icon")
                     0
