--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -409,7 +409,7 @@
       font-weight: bold;
       line-height: 1.4;
     }
-    &____text {
+    &__text {
       font-size: 35px;
       text-shadow: 0 0 5px rgba(0,0,0,0.4);
     }
@@ -425,5 +425,50 @@
         width: 180px;
       }
     }
+  }
+}
+
+// footer部
+.footer {
+  padding: 60px 0;
+  color: #fff;
+  background-color: #272727;
+  text-align: center;
+  ul {
+    list-style: none;
+  }
+  .contents {
+    max-width: 840px;
+    margin: 0 auto;
+    display: flex;
+    .content {
+      display: flex;
+      flex-direction: column;
+      width: calc(1 / 3 * 100%);
+      margin: 0 2% 0 0;
+      &__head {
+        margin: 0 0 20px;
+        font-size: 16px;
+        font-weight: bold;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 12px;
+        line-height: 32px;
+      }
+    }
+  }
+  &__log {
+    max-width: 160px;
+    width: 100%;
+    margin: 0 auto;
+    img {
+      width: 100%;
+      vertical-align: bottom;
+    }
+  }
+  p {
+    font-size: 14px;
   }
 }
