--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -26,7 +26,7 @@
             ログイン
         %li.lists__right__item.lists__right__item--new
           = link_to "#" do
-            新規登録
+            新規会員登録
 
 .main
   .top-view
@@ -280,3 +280,9 @@
     = link_to "/" do
       = image_tag '/logo/logo-white.png'
   %p © FURIMA
+
+= link_to "#" do
+  .exhibition-btn
+    %span.exhibition-btn__text
+      出品する
+    = image_tag('/icon/icon_camera.png', class: "exhibition-btn__icon")
