link_toの記述を修正

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -15,18 +15,14 @@
     %nav.lists
       %ul.lists__left
         %li.lists__left__item.lists__left__item--first
-          = link_to "#" do
-            カテゴリー
+          = link_to "カテゴリー", "#"
         %li.lists__left__item
-          = link_to "#" do
-            ブランド
+          = link_to "ブランド", "#"
       %ul.lists__right
         %li.lists__right__item.lists__right__item--login
-          = link_to "#" do
-            ログイン
+          = link_to "ログイン", "#"
         %li.lists__right__item.lists__right__item--new
-          = link_to "#" do
-            新規会員登録
+          = link_to "新規会員登録", "#"
 
 .main
   .top-view
@@ -242,40 +238,31 @@
         FURIMAについて
       %ul
         %li
-          = link_to "#" do
-            会社概要 (運営会社)
+          = link_to "会社概要 (運営会社)", "#"
         %li
-          = link_to "#" do
-            プライバシーポリシー
+          = link_to "プライバシーポリシー", "#"
         %li
-          = link_to "#" do
-            FURIMA利用規約
+          = link_to "FURIMA利用規約", "#"
         %li
-          = link_to "#" do
-            ポイントに関する特約
+          = link_to "ポイントに関する特約", "#"
     %li.content
       %h2.content__head
         FURIMAを見る
       %ul
         %li
-          = link_to "#" do
-            カテゴリー一覧
+          = link_to "カテゴリー一覧", "#"
         %li
-          = link_to "#" do
-            ブランド一覧
+          = link_to "ブランド一覧", "#"
     %li.content
       %h2.content__head
         ヘルプ&ガイド
       %ul
         %li
-          = link_to "#" do
-            FURIMAガイド
+          = link_to "FURIMAガイド", "#"
         %li
-          = link_to "#" do
-            FURIMAロゴ利用ガイドライン
+          = link_to "FURIMAロゴ利用ガイドライン", "#"
         %li
-          = link_to "#" do
-            お知らせ
+          = link_to "お知らせ", "#"
   .footer__log
     = link_to "/" do
       = image_tag '/logo/logo-white.png'
