--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -20,9 +20,9 @@
           = link_to "ブランド", "#"
       %ul.lists__right
         %li.lists__right__item.lists__right__item--login
-          = link_to "ログイン", "#"
+          = link_to "ログイン", new_user_session_path, class: 'items'
         %li.lists__right__item.lists__right__item--new
-          = link_to "新規会員登録", "#"
+          = link_to "新規会員登録", new_user_registration_path, class: 'items'
 
 .main
   .top-view
