--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,28 +1,4 @@
-%header.header
-  .headerinner
-    .headermain
-      .headermain__logo
-        = link_to "#" do
-          = image_tag '/logo/logo.png', class: "headermain__logo--img"
-
-      .headermain__search
-        = form_tag("#", method: 'get') do
-          = text_field_tag :search, '', placeholder: "キーワードから探す", class: "search__input"
-          %button{type: "submit"}
-            .search__submit
-              = image_tag '/icon/icon-search 1.png', class: "search__submit__btn"
-
-    %nav.lists
-      %ul.lists__left
-        %li.lists__left__item.lists__left__item--first
-          = link_to "カテゴリー", "#"
-        %li.lists__left__item
-          = link_to "ブランド", "#"
-      %ul.lists__right
-        %li.lists__right__item.lists__right__item--login
-          = link_to "ログイン", new_user_session_path, class: 'items'
-        %li.lists__right__item.lists__right__item--new
-          = link_to "新規会員登録", new_user_registration_path, class: 'items'
+= render 'modules/header'
 
 .main
   .top-view
@@ -231,42 +207,7 @@
       = link_to image_tag('/icon/appstore.svg', class: "btn__image"), "#", class: "btn"
       = link_to image_tag('/icon/google-play.svg', class: "btn__image"), "#", class: "btn"
 
-.footer
-  %ul.contents
-    %li.content
-      %h2.content__head
-        FURIMAについて
-      %ul
-        %li
-          = link_to "会社概要 (運営会社)", "#"
-        %li
-          = link_to "プライバシーポリシー", "#"
-        %li
-          = link_to "FURIMA利用規約", "#"
-        %li
-          = link_to "ポイントに関する特約", "#"
-    %li.content
-      %h2.content__head
-        FURIMAを見る
-      %ul
-        %li
-          = link_to "カテゴリー一覧", "#"
-        %li
-          = link_to "ブランド一覧", "#"
-    %li.content
-      %h2.content__head
-        ヘルプ&ガイド
-      %ul
-        %li
-          = link_to "FURIMAガイド", "#"
-        %li
-          = link_to "FURIMAロゴ利用ガイドライン", "#"
-        %li
-          = link_to "お知らせ", "#"
-  .footer__log
-    = link_to "/" do
-      = image_tag '/logo/logo-white.png'
-  %p © FURIMA
+= render 'modules/footer'
 
 = link_to "#" do
   .exhibition-btn
