[訂正]サイズの追加

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -38,6 +38,11 @@
           = f.select "#", ["選択してください", "レディース", "メンズ", "ベビー・キッズ", "インテリア・住まい・小物", "本・音楽・ゲーム", "おもちゃ・ホビー・グッズ", "コスメ・香水・美容", "家電・スマホ・カメラ","スポーツ・レジャー","スポーツ・レジャー", "ハンドメイド", "チケット", "自動車・オートバイ", "その他"]
 
 
+
+          %lavel サイズ
+          %span.required 必須
+          = f.select "#", ["選択してください","XXS以下", "XS(SS)", "S", "M", "L", "XL(LL)", "2XL(3L)", "3XL(4L)以上","4XL(5L)以上","23.5cm以下","24cm","24.5cm","25cm","25.5cm","26cm以上","60cm","70cm","80cm","90cm","100cm","110cm","120cm","130cm","140cm","150cm","160cm","FREE SIZE"]
+
         .content__brand
           %lavel ブランド
           %span.any 任意
