--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -1,3 +1,15 @@
+@mixin lavel{
+  margin-left: 8px;
+  font-size: 12px;
+  padding: 2px 4px;
+  background-color: #ff0211;
+  color: #fff;
+  border-radius: 2px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.4em;
+}
+
 .exhibition {
   background-color:#f5f5f5;
   min-height: 100vh;
@@ -14,26 +26,11 @@
       line-height: 1.4em;
     }
     .required{
-      margin-left: 8px;
-      font-size: 12px;
-      padding: 2px 4px;
-      background-color: #ff0211;
-      color: #fff;
-      border-radius: 2px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 1.4em;
+      @include lavel;
     }
     .any{
-      margin-left: 8px;
-      font-size: 12px;
-      padding: 2px 4px;
+      @include lavel;
       background-color: #afafaf;
-      color: #fff;
-      border-radius: 2px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 1.4em;
     }
     input,select {
       border: 1px solid #ccc;
