--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -6,7 +6,7 @@
     = form_for "#" do |f|
       .content-image.border
         .content__image
-          %lavel 出品画像
+          %label 出品画像
           %span.required 必須
           .content__image__message
           最大10枚までアップロードできます
@@ -18,14 +18,14 @@
               = f.file_field "#", type: 'file', name: "#", style: "display:none"
       .content-name.border
         .content__name
-          %lavel 商品名
+          %label 商品名
           %span.required 必須
         .content__input
           = f.text_field "#", class: "sale-info", placeholder: "40文字まで", type: "text", maxlength: "40", required: ""
         
         
         .content__explanation
-          %lavel 商品の説明
+          %label 商品の説明
           %span.required 必須
         .content__textarea
           = f.text_area "#",  rows: "7", maxlength: "1000", required: "", placeholder: "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
@@ -33,23 +33,23 @@
       .content-detail.border
         .content__category
           %p 商品の詳細
-          %lavel カテゴリー
+          %label カテゴリー
           %span.required 必須
           = f.select "#", ["選択してください", "レディース", "メンズ", "ベビー・キッズ", "インテリア・住まい・小物", "本・音楽・ゲーム", "おもちゃ・ホビー・グッズ", "コスメ・香水・美容", "家電・スマホ・カメラ","スポーツ・レジャー","スポーツ・レジャー", "ハンドメイド", "チケット", "自動車・オートバイ", "その他"]
 
 
 
-          %lavel サイズ
+          %label サイズ
           %span.required 必須
           = f.select "#", ["選択してください","XXS以下", "XS(SS)", "S", "M", "L", "XL(LL)", "2XL(3L)", "3XL(4L)以上","4XL(5L)以上","23.5cm以下","24cm","24.5cm","25cm","25.5cm","26cm以上","60cm","70cm","80cm","90cm","100cm","110cm","120cm","130cm","140cm","150cm","160cm","FREE SIZE"]
 
         .content__brand
-          %lavel ブランド
+          %label ブランド
           %span.any 任意
           = f.text_field "#", placeholder: "例）シャネル", type: "text", maxlength: "40", required: ""
 
         .content__status
-          %lavel 商品の状態
+          %label 商品の状態
           %span.required 必須
           = f.select "#", ["選択してください", "新品、未使用", "未使用に近い", "目立った傷や汚れなし", "やや傷や汚れあり", "やや傷や汚れあり", "傷や汚れあり", "傷や汚れあり", "全体的に状態が悪い"]
 
@@ -62,25 +62,25 @@
             %path{d: "M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18.6A8.6,8.6,0,1,1,20.6,12,8.61,8.61,0,0,1,12,20.6Z"}
             %path{d: "M14.18,7.52A2.72,2.72,0,0,0,13.25,7a3.16,3.16,0,0,0-1.17-.2A3.12,3.12,0,0,0,10,7.43,2.92,2.92,0,0,0,9,9.27c0,.12,0,.18.12.19l1.4.22c.09,0,.15,0,.17-.13a1.63,1.63,0,0,1,.44-.91A1.2,1.2,0,0,1,12,8.31a1.17,1.17,0,0,1,.88.33,1.15,1.15,0,0,1,.33.83,1.62,1.62,0,0,1-.12.61,3.46,3.46,0,0,1-.41.67l-1.23,1.67a2.53,2.53,0,0,0-.31.58,2.51,2.51,0,0,0-.09.75v.63a.14.14,0,0,0,.16.16h1.44a.14.14,0,0,0,.16-.16v-.45a1.7,1.7,0,0,1,.07-.56,1.31,1.31,0,0,1,.24-.42l1.22-1.67A2.93,2.93,0,0,0,15,9.46a2.62,2.62,0,0,0-.22-1.09A2.43,2.43,0,0,0,14.18,7.52Z"}
             %circle{cx: "12", cy: "16.24", r: "1"}
-        %lavel 配送料の負担
+        %label 配送料の負担
         %span.required 必須
         = f.select "#", ["選択してください", "送料込み(出品者負担)", "着払い(購入者負担)"]
 
 
         .content__method
-        %lavel 配送の方法
+        %label 配送の方法
         %span.required 必須
         = f.select "#", ["選択してください", "未定", "らくらくメルカリ便","ゆうゆうメルカリ便", "ゆうメール","レターパック","普通郵便(定形、定形外)","クロネコヤマト","ゆうパック", "クリックポスト","ゆうパケット"]
 
 
         .content__area
-        %lavel 発送元の地域
+        %label 発送元の地域
         %span.required 必須
         = f.select "#", ["選択してください", "北海道", "青森県","岩手県", "宮城県","秋田県","山形県","福島県","茨城県", "栃木県","群馬県","埼玉県","千葉県", "東京都","神奈川県","新潟県","富山県","石川県","福井県", "山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県", "和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県", "大分県","宮崎県","鹿児島県", "沖縄県","未定"]
 
 
         .content__day
-        %lavel 発送までの日数
+        %label 発送までの日数
         %span.required 必須
         = f.select "#", ["選択してください", "1~2日で発送", "2~3日で発送","4~7日で発送"]
 
@@ -96,7 +96,7 @@
               %circle{cx: "12", cy: "16.24", r: "1"}
         .content__selling-price
           .content__selling-price__price
-            %lavel 販売価格
+            %label 販売価格
             %span.required 必須
             %span.yen ¥
           .content__selling-price__from            
