--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -109,7 +109,7 @@
             %span.value ー
         .btn-form
           = f.submit "出品する", class:"sale-btn"
-          %button.save-btn{type: "button"} 下書きに保存
+          %button.save-btn 下書きに保存
           = link_to "#", class: "back" do
             もどる
         .attention
