ログアウト機能実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 @import "modules/sub_header";
 @import "modules/sub.footer";
 @import "items/buy_confirmation";
-@import "./mypage.scss"
+@import "mypage/mypage";
+@import "mypage/logout";
