--- a/app/assets/stylesheets/mypage/mypage.scss
+++ b/app/assets/stylesheets/mypage/mypage.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the items controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 
 @mixin side__bar {
   display: flex;
@@ -127,6 +123,7 @@ body {
     &__information {
       margin-top: 40px;
       &__detail {
+        color: black;
         @include side__bar;
         &__title {
           @include side__bar;
@@ -179,6 +176,7 @@ body {
         background-color: $light_grey;
       }
       &__detail {
+        color: black;
         @include side__bar;
       }
       &__detail p {
@@ -205,6 +203,7 @@ body {
         font-weight: bold;
       }
       &__detail {
+        color: black;
         @include side__bar;
       }
       &__detail:hover {
