--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -96,21 +96,23 @@
           %h3.title
             新規投稿商品
       .pickup__box__lists
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a001.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    3000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
+        - @items.each do |item|
+          .list
+            = link_to "#" do
+              .list--img
+                = image_tag '/pict/a001.png'
+              .list__body
+                %h3.list__body--name
+                  商品名
+                .list__body--details
+                  %ul
+                    %li
+                      3000円
+                    %li
+                      = icon("fas", "star", class: "list__body--details--icon")
+                      0
+                  %p
+                    (税込)
         .list
           = link_to "#" do
             .list--img
