--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,3 +1,4 @@
+= render "modules/header"
 %main.show-main
   .center-wrapper
     .item-container
@@ -78,3 +79,4 @@
           = render 'related_item'
           = render 'related_item'
           = render 'related_item'
+= render "modules/footer"
