--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -3,11 +3,11 @@
   .center-wrapper
     .item-container
       %h1.item-name
-        商品名
+        = @item.name
       .item-container__info
         .item-container__info__image
           .image-show
-            = image_tag "/test.jpg", alt: "画像"
+            = image_tag "#{@item.images[0].image}", alt: "画像"
           .image-list
             .image-list__item
               = image_tag "/test.jpg", alt: "画像"
@@ -27,37 +27,36 @@
               %th
                 出品者
               %td
-                = link_to "user", "#"
+                = link_to @item.user.nickname, "#"
             %tr
               %th
                 カテゴリー
               %td
-                = link_to "メンズ", "#"
-                = link_to "> 靴", "#"
-                = link_to "> スニーカー", "#"
+                = link_to @item.category.ancestry, "#"
+                = link_to "> #{@item.category.name}", "#"
             %tr
               %th
                 商品の状態
               %td
-                新品
+                = @item.status
             %tr
               %th
                 発送料の負担
               %td
-                送料込み（出品者負担）
+                = @item.shipping_cost
             %tr
               %th
                 発送元地域
               %td
-                大阪
+                = @item.prefecture.name
             %tr
               %th
                 発送までの日数
               %td
-                1~2日で発送
+                = @item.shipping_date
       .item-container__price-box
         %span.item-container__price-box__price
-          ¥12,000
+          = "¥#{@item.price.to_i.to_s(:delimited)}"
         %span.item-container__price-box__tax
           (税込)
         %span.item-container__price-box__delivery-fee
@@ -68,7 +67,7 @@
     .related-items
       %section
         %h2
-          userのその他の商品
+          = "#{@item.user.nickname}さんのその他の商品"
         .items
           = render 'related_item'
           = render 'related_item'
