replace images at variables each do
仮で置いていた画像の繰り返し処理を変数を使って書き直しました。
繰り返し処理にインデックス番号を含めている理由は、クラス名を変化させることでクリックされた画像の要素を取得、画像の拡大する機能に流用するためです。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -9,18 +9,9 @@
           .image-show
             = image_tag "#{@item.images[0].image}", alt: "画像"
           .image-list
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
-            .image-list__item
-              = image_tag "/test.jpg", alt: "画像"
+            - @item.images.each_with_index do |image, i|
+              .image-list__item
+                = image_tag "#{image.image}", alt: "画像", class: "image-index-#{i}"
         %table.item-container__info__detail
           %tbody
             %tr
