Add edit & delete btn
商品の編集・削除ボタンを追加しました。
条件として出品者のみ編集削除が表示され、それ以外の利用者には購入確認ボタンが表示されます。
コントローラーで制限を設けているため、購入確認画面へ遷移できるのはログイン済のユーザーのみです。
未ログインのユーザーは自動的にログイン画面へ遷移します。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -51,8 +51,14 @@
         %span.item-container__price-box__tax
           (税込)
         %span.item-container__price-box__delivery-fee
-          送料込み
-      = link_to "購入画面に進む", item_buy_confirmation_path(item_id: ":item_id"), {class: "item-container__buy-btn"}
+          = @item.shipping_cost.gsub(/送料込み.+/, "送料込み").gsub(/着払い.+/, "着払い")
+      - if current_user.id == @item.user_id
+        = link_to "商品の編集", "#", {class: "item-container__edit-btn"}
+        %p
+        = link_to "この商品を削除する", "#", {class: "item-container__delete-btn"}
+      - else
+        = link_to "購入画面に進む", item_buy_confirmation_path(item_id: @item.id), {class: "item-container__buy-btn"}
+        
       .item-container__explanation
         商品の説明
     .related-items
