update render template same user items
同じユーザーのその他の商品を表示する処理を変数を利用して記述し直しました。
同じカテゴリーの商品も同じビューを利用するのでテンプレートにしました。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -66,8 +66,7 @@
         %h2
           = "#{@item.user.nickname}さんのその他の商品"
         .items
-          = render 'related_item'
-          = render 'related_item'
+          = render partial: 'related_item', collection: @same_user_items, as: "item"
       %section
         %h2
           同じカテゴリーの商品
