--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -69,9 +69,10 @@
           = render partial: 'related_item', collection: @same_user_items, as: "item"
       %section
         %h2
-          同じカテゴリーの商品
+          - if @item.category.ancestry.present?
+            = "#{@item.category.name}(#{@item.category.ancestry})その他の商品"
+          - else
+            = "#{@item.category.name}その他の商品"
         .items
-          = render 'related_item'
-          = render 'related_item'
-          = render 'related_item'
+          = render partial: 'related_item', collection: @same_category_items, as: "item"
 = render "modules/footer"
