--- a/app/views/items/_related_item.html.haml
+++ b/app/views/items/_related_item.html.haml
@@ -1,9 +1,9 @@
 .items__item
   = link_to "#" do
     .items__item__image
-      = image_tag "/test.jpg", alt: "画像"
+      = image_tag item.images[0].image, alt: "画像"
     .items__item__info
       .items__item__info__name
-        商品名
+        = item.name
       .items__item__info__price
-        ¥1,000
+        = "¥#{item.price.to_i.to_s(:delimited)}"
