--- a/app/assets/stylesheets/mixin/_show.scss
+++ b/app/assets/stylesheets/mixin/_show.scss
@@ -2,3 +2,18 @@
   height: $height;
   width: $width;
 }
+
+@mixin link-btn($font-size: 24px, $background-color: #3CCACE, $background-color-hover: #27BABE) {
+  display: block;
+  margin-top: 16px;
+  background-color: $background-color;
+  color: #fff;
+  text-decoration: none;
+  font-size: $font-size;
+  line-height: 60px;
+  text-align: center;
+  font-weight: 600;
+  &:hover {
+    background-color: $background-color-hover;
+  }
+}
