edit text items#show
テキストに若干の不備があったので修正しました。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -32,17 +32,17 @@
                 = @item.status
             %tr
               %th
-                発送料の負担
+                配送料の負担
               %td
                 = @item.shipping_cost
             %tr
               %th
-                発送元地域
+                配送元地域
               %td
                 = @item.prefecture.name
             %tr
               %th
-                発送までの日数
+                発送日の目安
               %td
                 = @item.shipping_date
       .item-container__price-box
