商品一覧を表示

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -100,7 +100,7 @@
           .list
             = link_to "#" do
               .list--img
-                = image_tag item.images.first.image.url
+                = image_tag item.images[0].image
               .list__body
                 %h3.list__body--name
                   = item.name
@@ -113,36 +113,6 @@
                       0
                   %p
                     (税込)
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a004.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    2000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a007.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    1000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
 
   .pickup
     %h2.pickup__head
@@ -153,51 +123,24 @@
           %h3.title
             新規投稿商品
       .pickup__box__lists
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a001.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    3000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a004.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    2000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
-        .list
-          = link_to "#" do
-            .list--img
-              = image_tag '/pict/a007.png'
-            .list__body
-              %h3.list__body--name
-              .list__body--details
-                %ul
-                  %li
-                    1000円
-                  %li
-                    = icon("fas", "star", class: "list__body--details--icon")
-                    0
-                %p
-                  (税込)
+        -  @item_brands.each do |item|
+          .list
+            = link_to "#" do
+              .list--img
+                = image_tag item.images[0].image
+              .list__body
+                %h3.list__body--name
+                  = item.name
+                .list__body--details
+                  %ul
+                    %li
+                      = "#{item.price}円"
+                    %li
+                      = icon("fas", "star", class: "list__body--details--icon")
+                      0
+                  %p
+                    (税込)
+        
 
 %aside.app-bottom
   .app-bottom__inner
