各ページリンクを追加

--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -2,7 +2,7 @@
   .headerinner
     .headermain
       .headermain__logo
-        = link_to "#" do
+        = link_to "/" do
           = image_tag '/logo/logo.png', class: "headermain__logo--img"
 
       .headermain__search
