--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -98,7 +98,7 @@
       .pickup__box__lists
         - @items.each do |item|
           .list
-            = link_to "#" do
+            = link_to "/items/#{item.id}", method: :get do
               .list--img
                 = image_tag item.images[0].image
               .list__body
@@ -125,7 +125,7 @@
       .pickup__box__lists
         -  @item_brands.each do |item|
           .list
-            = link_to "#" do
+            = link_to "/items/#{item.id}", method: :get do
               .list--img
                 = image_tag item.images[0].image
               .list__body
@@ -154,7 +154,7 @@
 
 = render 'modules/footer'
 
-= link_to "#" do
+= link_to new_item_path do
   .exhibition-btn
     %span.exhibition-btn__text
       出品する
