--- a/app/views/modules/_header.html.haml
+++ b/app/views/modules/_header.html.haml
@@ -21,6 +21,7 @@
       %ul.lists__right
         - if user_signed_in?
           %li.lists__right__item.lists__right__item--login
+            = link_to "ログアウト", destroy_user_session_path, method: :delete
             = link_to "マイページ", "#"
         - else
           %li.lists__right__item.lists__right__item--login
