--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "./items.scss";
 @import "users/sign_in";
 @import "users/sign_up";
+@import "users/sign_footer";
 
 @import "mixin/show";
 @import "items/show";
