--- a/app/assets/stylesheets/users/_sign_in.scss
+++ b/app/assets/stylesheets/users/_sign_in.scss
@@ -1,13 +1,13 @@
 @mixin formbox{
-  width: 90%;
-  height: 20px;
+  width: calc(100% - 36px);
+  height: 30px;
   padding: 10px 16px 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
   background: #fff;
   line-height: 1.5;
   font-size: 16px;
-  height: 30px;
+
 }
 
 @mixin btnbox{
@@ -29,64 +29,68 @@
   font-size: 12px;
 }
 
-.signUp {
-  height: 100%;
+@mixin inputName {
+  font-size: 22px;
+  text-align: center;
+  font-weight: bold;
+  padding: 33px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.signIn {
+  height: 100vh;
   width: 100%;
   background-color: #f5f5f5;
-  .header {
-    height: 100px;
+  .header2 {
+    height: 128px;
     width: 100%;
+    margin: 0 auto;
     &__image {
-      width: 300px;
-      height: 100px;
+      width: 185px;
+      height: 49px;
       margin: 0 auto;
+      padding-top: 40px;
     }
   }
-  .input {
+  .input2 {
     width: 50%;
-    height: 100%;
+    height: calc(100% - 190px);
     margin: 0 auto;
     background-color: white;
+    
+    &__name {
+      @include inputName()
+    }
     &__group {
-      padding: 20px;
-      width: 300px;
+      padding: 30px 20px;
+      width: 50%;
       margin: 0 auto;
-      &__mailadress {
-        font-size: 15px;
-        font-weight: 600;
+      &__content1 {
+        &__mailadress {
+          font-size: 15px;
+          font-weight: 600;
+        }
+        &__box {
+          @include formbox
+        }
       }
-      &__pasword {
-        font-size: 15px;
-        font-weight: 600;
+      &__content2 {
+        &__password {
+          font-size: 15px;
+          font-weight: 600;
+        }
+        &__box {
+          @include formbox
+        }
       }
+      
+      
+      
     }
     
     &__group__btn {
       @include btnbox
     }
 
-  }
-  .footer {
-    height: 190px;
-    width: 100%;
-    background-color: #f5f5f5;
-    padding: 40px 0;
-    text-align: center;
-    &__content {
-      width: 456px;
-      margin: 0 auto;
-      &__text {
-        &__policy {
-          @include textpolicy
-        }
-      }
-      &__image {
-        width: 200px;
-        height: 65px;
-        margin: 40px auto 0;
-      }
-    
-      
-    }
   }
 }
