購入時SOLDの追加

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -101,6 +101,10 @@
             = link_to "/items/#{item.id}", method: :get do
               .list--img
                 = image_tag item.images[0].image
+                  -# sizeは仮
+                  - if item.size == ""
+                  .list--img__sold
+                    .list--img__sold__inner SOLD
               .list__body
                 %h3.list__body--name
                   = item.name
@@ -128,6 +132,9 @@
             = link_to "/items/#{item.id}", method: :get do
               .list--img
                 = image_tag item.images[0].image
+                  - if item.size == ""
+                  .list--img__sold
+                    .list--img__sold__inner SOLD
               .list__body
                 %h3.list__body--name
                   = item.name
